Add logo, create new style file, update about_me_page layout

--- a/index.html
+++ b/index.html
@@ -12,255 +12,270 @@
 
 <body>
     <nav>
-        <a href="#">Home</a>
-        <a href="./pages/about_me_page.html">About me</a>
+        <a href="#" class="nav_highlight">
+            <p>Home</p>
+        </a>
+        <a href="./pages/about_me_page.html">
+            <p>About me</p>
+        </a>
     </nav>
-    <!-- Personal info -->
-    <h1>Personal Information</h1>
-    <div class="personal_info">
-        <img src="./images/user.jpg" alt="User Picture" width="20%" height="20%"
-            style="border-radius: 10px;border: 1px solid black;">
-        <div>
-            <div class="personal_info_row" style="border-top: 1px solid black;">
-                <p>Full Name:</p>
-                <p>Trần Vũ Minh Đăng</p>
+    <main>
+        <!-- Personal info -->
+        <h1>Personal Information</h1>
+        <div class="personal_info">
+            <img src="./images/user.jpg" alt="User Picture" width="20%" height="20%"
+                style="border-radius: 10px;border: 1px solid black;">
+            <div>
+                <div class="personal_info_row" style="border-top: 1px solid black;">
+                    <p>Full Name:</p>
+                    <p>Trần Vũ Minh Đăng</p>
+                </div>
+                <div class="personal_info_row">
+                    <p>Profession:</p>
+                    <p>Part-time Programming Teacher</p>
+                </div>
+                <div class="personal_info_row">
+                    <p>Undergraduate:</p>
+                    <p>FPT Polytechnic</p>
+                </div>
+                <div class="personal_info_row">
+                    <p>Major:</p>
+                    <p>Computer Science</p>
+                </div>
+                <div class="personal_info_row">
+                    <p>Phone number:</p>
+                    <p>(+84) 582 814 653</p>
+                </div>
+                <div class="personal_info_row">
+                    <p>Seeking for:</p>
+                    <p>Intern/Fresher Mobile Developer job</p>
+                </div>
             </div>
-            <div class="personal_info_row">
-                <p>Profession:</p>
-                <p>Part-time Programming Teacher</p>
-            </div>
-            <div class="personal_info_row">
-                <p>Undergraduate:</p>
-                <p>FPT Polytechnic</p>
-            </div>
-            <div class="personal_info_row">
-                <p>Major:</p>
-                <p>Computer Science</p>
-            </div>
-            <div class="personal_info_row">
-                <p>Phone number:</p>
-                <p>(+84) 582 814 653</p>
-            </div>
-            <div class="personal_info_row">
-                <p>Seeking for:</p>
-                <p>Intern/Fresher Mobile Developer job</p>
-            </div>
+
         </div>
 
-    </div>
 
 
+        <!-- Projects -->
+        <h1>Coding Projects</h1>
+        <section class="projects">
+            <article class="project_item">
+                <div>
+                    <img src="./images/florist_shop.jpg" class="img_cover" width="200px" />
+                </div>
+                <div class="project_item_info">
+                    <div>
+                        <h2>Florist Shop</h2>
+                        <p>Personal Project</p>
+                        <div class="project_row">
+                            <p>Status:</p>
+                            <p>Ongoing</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Start - End:</p>
+                            <p>01/2024 - NOW</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Technology:</p>
+                            <p>React Native, Firebase</p>
+                        </div>
+                        <div class="project_row" style="margin-bottom:40px">
+                            <p>Description:</p>
+                            <p>Sell bouquet</p>
+                        </div>
+                    </div>
+                    <a class="button_project" href="./pages/florist_project_page.html">See More</a>
+                </div>
+            </article>
 
-    <!-- Projects -->
-    <h1>Coding Projects</h1>
-    <section class="projects">
-        <article class="project_item">
-            <div>
-                <img src="./images/florist_shop.jpg" class="img_cover" width="200px" />
-            </div>
-            <div>
-                <h2>Florist Shop</h2>
-                <p>Personal Project</p>
-                <div class="project_row">
-                    <p>Status:</p>
-                    <p>Ongoing</p>
+            <article class="project_item">
+                <div>
+                    <img src="./images/project1.jpg" class="img_cover" width="200px" />
                 </div>
-                <div class="project_row">
-                    <p>Start - End:</p>
-                    <p>01/2024 - NOW</p>
-                </div>
-                <div class="project_row">
-                    <p>Technology:</p>
-                    <p>React Native, Firebase</p>
-                </div>
-                <div class="project_row" style="margin-bottom:40px">
-                    <p>Description:</p>
-                    <p>Sell bouquet</p>
-                </div>
+                <div class="project_item_info">
+                    <div>
+                        <h2>Laptop Firebase</h2>
+                        <p>Personal Project</p>
+                        <div class="project_row">
+                            <p>Status:</p>
+                            <p>Ongoing</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Start - End:</p>
+                            <p>08/2023 - 11/2023</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Technology:</p>
+                            <p>React Native, Firebase</p>
+                        </div>
+                        <div class="project_row" style="margin-bottom:40px">
+                            <p>Description:</p>
+                            <p>sell laptop</p>
+                        </div>
+                    </div>
 
-                <a class="button_project" href="./pages/florist_project_page.html">See More</a>
-            </div>
-        </article>
+                    <a class="button_project" href="./pages/laptop_project_new_page.html">See more</a>
+                </div>
+            </article>
 
-        <article class="project_item">
-            <div>
-                <img src="./images/project1.jpg" class="img_cover" width="200px" />
-            </div>
-            <div>
-                <h2>Laptop Firebase</h2>
-                <p>Personal Project</p>
-                <div class="project_row">
-                    <p>Status:</p>
-                    <p>Ongoing</p>
+            <article class="project_item">
+                <div>
+                    <img src="./images/laptop_expo.jpg" class="img_cover" width="200px" />
                 </div>
-                <div class="project_row">
-                    <p>Start - End:</p>
-                    <p>08/2023 - 11/2023</p>
+                <div class="project_item_info">
+                    <div>
+                        <h2>Laptop project (old)</h2>
+                        <p>Personal Project</p>
+                        <div class="project_row">
+                            <p>Status:</p>
+                            <p>Ongoing</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Start - End:</p>
+                            <p>08/2023 - 11/2023</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Technology:</p>
+                            <p>React Native, Expo, PHP, MySQL</p>
+                        </div>
+                        <div class="project_row" style="margin-bottom:40px">
+                            <p>Description:</p>
+                            <p>My graduation project</p>
+                        </div>
+                    </div>
+                    <a class="button_project" href="./pages/laptop_project_old_page.html">See More</a>
                 </div>
-                <div class="project_row">
-                    <p>Technology:</p>
-                    <p>React Native, Firebase</p>
-                </div>
-                <div class="project_row" style="margin-bottom:40px">
-                    <p>Description:</p>
-                    <p>sell laptop</p>
-                </div>
-
-
-                <a class="button_project" href="./pages/laptop_project_new_page.html">See More</a>
-            </div>
-        </article>
-
-        <article class="project_item">
-            <div>
-                <img src="./images/laptop_expo.jpg" class="img_cover" width="200px" />
-            </div>
-            <div>
-                <h2>Laptop project (old)</h2>
-                <p>Personal Project</p>
-                <div class="project_row">
-                    <p>Status:</p>
-                    <p>Ongoing</p>
-                </div>
-                <div class="project_row">
-                    <p>Start - End:</p>
-                    <p>08/2023 - 11/2023</p>
-                </div>
-                <div class="project_row">
-                    <p>Technology:</p>
-                    <p>React Native, Expo, PHP, MySQL</p>
-                </div>
-                <div class="project_row" style="margin-bottom:40px">
-                    <p>Description:</p>
-                    <p>My graduation project</p>
-                </div>
-
-                <a class="button_project" href="./pages/laptop_project_old_page.html">See More</a>
-            </div>
-        </article>
-
-
-    </section>
-
-    <!-- Projects -->
-    <h1>Other Projects</h1>
-    <section class="projects">
-        <article class="project_item">
-            <div>
-                <img src="./images/lafyuu.jpg" class="img_cover" width="200px" />
-            </div>
-            <div>
-                <h2>Clothes Shop</h2>
-                <p>Personal Project</p>
-                <div class="project_row">
-                    <p>Status:</p>
-                    <p>Paused</p>
-                </div>
-                <div class="project_row">
-                    <p>Start - End:</p>
-                    <p>11/2023 - NOW</p>
-                </div>
-                <div class="project_row">
-                    <p>Technology:</p>
-                    <p>Flutter</p>
-                </div>
-                <div class="project_row" style="margin-bottom:40px">
-                    <p>Description:</p>
-                    <p>Sell clothes</p>
-                </div>
-
-                <a class="button_project" href="./pages/florist_project_page.html">See More</a>
-            </div>
-        </article>
-
-        <article class="project_item">
-            <div>
-                <img src="./images/ulmo.jpg" class="img_cover" width="200px" />
-            </div>
-            <div>
-                <h2>Ulmo Shop</h2>
-                <p>Personal Project</p>
-                <div class="project_row">
-                    <p>Status:</p>
-                    <p>Paused</p>
-                </div>
-                <div class="project_row">
-                    <p>Start - End:</p>
-                    <p> 11/2023 - NOW</p>
-                </div>
-                <div class="project_row">
-                    <p>Technology:</p>
-                    <p>Android Studio, Kotlin</p>
-                </div>
-                <div class="project_row" style="margin-bottom:40px">
-                    <p>Description:</p>
-                    <p>Sell clothes</p>
-                </div>
+            </article>
 
 
-                <a class="button_project" href="./pages/florist_project_page.html">See More</a>
-            </div>
-        </article>
+        </section>
 
-        <article class="project_item">
-            <div>
-                <img src="./images/shooter.jpg" class="img_cover" width="200px" />
-            </div>
-            <div>
-                <h2>2D Shooter Game</h2>
-                <p>Personal Project</p>
-                <div class="project_row">
-                    <p>Status:</p>
-                    <p>Finished</p>
+        <!-- Projects -->
+        <h1>Other Projects</h1>
+        <section class="projects">
+            <article class="project_item">
+                <div>
+                    <img src="./images/lafyuu.jpg" class="img_cover" width="200px" />
                 </div>
-                <div class="project_row" style="margin-bottom:40px">
-                    <p>Start - End:</p>
-                    <p>04/05/2023 - 11/05/2023</p>
-                </div>
-                <div class="project_row">
-                    <p>Technology:</p>
-                    <p>Unity</p>
-                </div>
-                <div class="project_row">
-                    <p>Description:</p>
-                    <p>Simple space shooter game</p>
-                </div>
-                <a class="button_project" href="./pages/florist_project_page.html">See More</a>
-            </div>
-        </article>
-
-    </section>
+                <div class="project_item_info">
+                    <div>
+                        <h2>Clothes Shop</h2>
+                        <p>Personal Project</p>
+                        <div class="project_row">
+                            <p>Status:</p>
+                            <p>Paused</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Start - End:</p>
+                            <p>11/2023 - NOW</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Technology:</p>
+                            <p>Flutter</p>
+                        </div>
+                        <div class="project_row" style="margin-bottom:40px">
+                            <p>Description:</p>
+                            <p>Sell clothes</p>
+                        </div>
+                    </div>
 
 
-    <h1>Hobbies</h1>
-    <section>
-        <article class="hobbies">
-            <img src="./images/donut.png" class="img_cover" width="200px" />
-            <div>
-                <h2>Donuts</h2>
-                <p>Practice</p>
-                <div class="project_row">
-                    <p>Status:</p>
-                    <p>Finished</p>
+                    <a class="button_project" href="./pages/florist_project_page.html">See More</a>
                 </div>
-                <div class="project_row">
-                    <p>Start - End:</p>
-                    <p>04/02/2023 - 06/02/2023</p>
+            </article>
+
+            <article class="project_item">
+                <div>
+                    <img src="./images/ulmo.jpg" class="img_cover" width="200px" />
                 </div>
-                <div class="project_row">
-                    <p>Technology:</p>
-                    <p>Blender</p>
+                <div class="project_item_info">
+                    <div>
+                        <h2>Ulmo Shop</h2>
+                        <p>Personal Project</p>
+                        <div class="project_row">
+                            <p>Status:</p>
+                            <p>Paused</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Start - End:</p>
+                            <p> 11/2023 - NOW</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Technology:</p>
+                            <p>Android Studio, Kotlin</p>
+                        </div>
+                        <div class="project_row" style="margin-bottom:40px">
+                            <p>Description:</p>
+                            <p>Sell clothes</p>
+                        </div>
+                    </div>
+
+                    <a class="button_project" href="./pages/florist_project_page.html">See More</a>
                 </div>
-                <div class="project_row" style="margin-bottom: 40px;">
-                    <p>Description:</p>
-                    <p>A small animation showcase donuts</p>
+            </article>
+
+            <article class="project_item">
+                <div>
+                    <img src="./images/shooter.jpg" class="img_cover" width="200px" />
+                </div>
+                <div class="project_item_info">
+                    <div>
+                        <h2>2D Shooter Game</h2>
+                        <p>Personal Project</p>
+                        <div class="project_row">
+                            <p>Status:</p>
+                            <p>Finished</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Start - End:</p>
+                            <p>04/05/2023 - 11/05/2023</p>
+                        </div>
+                        <div class=" project_row">
+                            <p>Technology:</p>
+                            <p>Unity</p>
+                        </div>
+                        <div class="project_row" style="margin-bottom:40px">
+                            <p>Description:</p>
+                            <p>Simple space shooter game</p>
+                        </div>
+                    </div>
+                    <a class="button_project" href="./pages/florist_project_page.html">See More</a>
                 </div>
 
-                <a class="button_project" href="./pages/donut_page.html">See More</a>
-            </div>
-        </article>
-    </section>
+            </article>
 
+        </section>
+
+
+        <h1>Hobbies</h1>
+        <section>
+            <article class="hobbies">
+                <img src="./images/donut.png" class="img_cover" width="200px" />
+                <div>
+                    <h2>Donuts</h2>
+                    <p>Practice</p>
+                    <div class="project_row">
+                        <p>Status:</p>
+                        <p>Finished</p>
+                    </div>
+                    <div class="project_row">
+                        <p>Start - End:</p>
+                        <p>04/02/2023 - 06/02/2023</p>
+                    </div>
+                    <div class="project_row">
+                        <p>Technology:</p>
+                        <p>Blender</p>
+                    </div>
+                    <div class="project_row" style="margin-bottom: 40px;">
+                        <p>Description:</p>
+                        <p>A small animation showcase donuts</p>
+                    </div>
+
+                    <a class="button_project" href="./pages/donut_page.html">See More</a>
+                </div>
+            </article>
+        </section>
+    </main>
 </body>
 
 </html>
