--- a/pages/about_me_page.html
+++ b/pages/about_me_page.html
@@ -1,38 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/about_styles.css">
     <title>About me</title>
 </head>
+
 <body>
-    <!-- About me -->
-    <h2>About me</h2>
-    <p>I enjoys creating apps and learning new things</p>
-    <p>Have more than 1.5 years of being a programming teacher</p>
-    <p>Short-term goal: become a mobile developer and improve my expertise as a developer</p>
-    <p>Long-term goal: create many reliable apps/websites</p>
+    <nav>
+        <a href="../index.html">
+            <p>Home</p>
+        </a>
+        <a href="#" class="nav_highlight">
+            <p>About me</p>
+        </a>
+    </nav>
+    <main>
+        <!-- About me -->
+        <h2>About me</h2>
+        <ul>
+            <li>I enjoys creating apps and learning new things</li>
+            <li>Have more than 1.5 years of being a programming teacher</li>
+            <li>Short-term goal: become a mobile developer and improve my expertise as a developer</li>
+            <li>Long-term goal: create many reliable apps/websites</li>
+        </ul>
 
-    <!-- Work Experiences -->
-    <h2>Work Experience</h2>
-    <h3>Programming Teacher (Part-time)</h3>
-    <p>Time: 08/2022 - NOW</p>
-    <p>Company name: Algorithmics</p>
-    <p>Description:</p>
-    <p>Teach Python, Web Development, Unity to children between the age of 5 and 17</p>
-    <p>Report on students' achievements and progress</p>
+        <!-- Work Experiences -->
+        <h2>Work Experience</h2>
 
-    <h3>Cashier (Full-time)</h3>
-    <p>Time: 02/2020 - 09/2020</p>
-    <p>Company name: B's Mart</p>
-    <p>Description: restock, organize, receive and unpack packages, check item quality and date</p>
+        <article class="work_experience">
+            <img src="../images/logo_algorithmics.png" alt="" width="50" height="50">
+            <div>
+                <h3>Programming Teacher (Part-time)</h3>
+                <p>Time: 08/2022 - NOW</p>
+                <p>Company name: Algorithmics</p>
+                <p>Description:</p>
+                <ul>
+                    <li>Teach Python, Web Development, Unity to children between the age of 5 and 17</li>
+                    <li>Report on students' achievements and progress</li>
+                </ul>
+            </div>
+        </article>
+        <article class="work_experience">
+            <img src="../images/logo_bsmart.png" alt="" width="50" height="50">
+            <div>
+                <h3>Cashier (Full-time)</h3>
+                <p>Time: 02/2020 - 09/2020</p>
+                <p>Company name: B's Mart</p>
+                <p>Description: restock, organize, receive and unpack packages, check item quality and date</p>
+            </div>
+        </article>
 
-    <!-- Education -->
-    <h2>Education</h2>
-    <p>College: FPT Polytechnic</p>
-    <p>Major: Computer Science</p>
-    <p>Status: Undergraduate</p>
-    <p>Description: Trained in popular technologies such as Java, XML, Android, cross platform, HTML5/CSS3, etc. To develop applications on mainstream platforms such as Android, Window Phone, IOS. Native, cross-platform applications or Unity games can be developed on these platforms. </p>
+
+
+        <!-- Education -->
+        <h2>Education</h2>
+        <article class="work_experience">
+            <img src="../images/logo_fpt_polytechnic.png" alt="" width="100" height="100">
+            <div>
+        <p>College: FPT Polytechnic</p>
+        <p>Major: Computer Science</p>
+        <p>Status: Undergraduate</p>
+        <p>Description: Trained in popular technologies such as Java, XML, Android, cross platform, HTML5/CSS3, etc. To
+            develop applications on mainstream platforms such as Android, Window Phone, IOS. Native, cross-platform
+            applications or Unity games can be developed on these platforms. </p>
+        </div>
+        </article>
+    </main>
 </body>
+
 </html>
