--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
         <!-- Projects -->
-        <h1>Coding Projects</h1>
+        <h1>React Native Projects</h1>
         <section class="projects">
             <article class="project_item">
                 <div>
@@ -77,7 +77,7 @@
                         </div>
                         <div class="project_row">
                             <p>Technology:</p>
-                            <p>React Native, Firebase</p>
+                            <p>React Native, Typescript, Firebase</p>
                         </div>
                         <div class="project_row" style="margin-bottom:40px">
                             <p>Description:</p>
@@ -102,11 +102,15 @@
                         </div>
                         <div class="project_row">
                             <p>Start - End:</p>
-                            <p>08/2023 - 11/2023</p>
+                            <p>10/2023 - 11/2023</p>
                         </div>
                         <div class="project_row">
                             <p>Technology:</p>
                             <p>React Native, Firebase</p>
+                        </div>
+                        <div class="project_row">
+                            <p>Layout:</p>
+                            <p>Inspiration from community project, Lafyuu</p>
                         </div>
                         <div class="project_row" style="margin-bottom:40px">
                             <p>Description:</p>
@@ -276,6 +280,21 @@
             </article>
         </section>
     </main>
+
+    <footer style="margin-bottom: 20%;">
+        <div style="background-color: black; position:fixed; bottom:0; width: 100%; padding: 12px;">
+        <h1 style="color: white;">Contact</h1>
+        <p style="color: white;">I am actively looking for Intern/Fresher Mobile Developer job</p>
+        <div class="project_row" style="color: white;">
+            <p>Phone number:</p>
+            <p>(+84) 582 814 653</p>
+        </div>
+        <div class="project_row" style="color: white;">
+            <p>Email:</p>
+            <p>trandang210799@gmail.com</p>
+        </div>
+    </div>
+    </footer>
 </body>
 
 </html>
