--- a/pages/about_me_page.html
+++ b/pages/about_me_page.html
@@ -28,6 +28,14 @@
             <li>Long-term goal: create many reliable apps/websites</li>
         </ul>
 
+<h2>Skills</h2>
+<ul>
+    <li>Front-End: React Native, ReactJS, Android Studio, Flutter</li>
+    <li>Back-End: MySQL, Firebase</li>
+    <li>Game: Unity, Roblox Studio</li>
+    <li>Languages: Javascript, Typescript, Java, Kotlin, Dart, C#, Luau, Python</li>
+</ul>
+
         <!-- Work Experiences -->
         <h2>Work Experience</h2>
 
@@ -61,13 +69,57 @@
         <article class="work_experience">
             <img src="../images/logo_fpt_polytechnic.png" alt="" width="100" height="100">
             <div>
-        <p>College: FPT Polytechnic</p>
-        <p>Major: Computer Science</p>
-        <p>Status: Undergraduate</p>
-        <p>Description: Trained in popular technologies such as Java, XML, Android, cross platform, HTML5/CSS3, etc. To
-            develop applications on mainstream platforms such as Android, Window Phone, IOS. Native, cross-platform
-            applications or Unity games can be developed on these platforms. </p>
-        </div>
+                <div class="project_row">
+                    <p>College:</p>
+                    <p>FPT Polytechnic</p>
+                </div>
+                <div class="project_row">
+                    <p>Major:</p>
+                    <p>Computer Science</p>
+                </div>
+                <div class="project_row">
+                    <p>Description:</p>
+                    <p>Trained in popular technologies such as Java, XML, Android, cross platform, HTML5/CSS3,
+                        etc. To
+                        develop applications on mainstream platforms such as Android, Window Phone, IOS. Native,
+                        cross-platform
+                        applications or Unity games can be developed on these platforms. </p>
+                </div>
+                <div class="project_row">
+                    <p>Status:</p>
+                    <p class="completed">Undergraduate</p>
+                </div>
+                <div class="project_row">
+                    <p>Time:</p>
+                    <p>09/2020 - 2024 (Waiting to graduate)</p>
+                </div>
+            </div>
+        </article>
+
+        <article class="work_experience">
+            <img src="../images/logo_khxhnv.png " alt="" width="100" height="100">
+            <div>
+                <div class="project_row">
+                    <p>College:</p>
+                    <p>University of Social Sciences and Humanities</p>
+                </div>
+                <div class="project_row">
+                    <p>Major:</p>
+                    <p>German Linguistics and Literature</p>
+                </div>
+                <div class="project_row">
+                    <p>Description:</p>
+                    <p>Learn German culture and language</p>
+                </div>
+                <div class="project_row">
+                    <p>Status:</p>
+                    <p class="dropped">Drop Out</p>
+                </div>
+                <div class="project_row">
+                    <p>Time:</p>
+                    <p>2017 - 2020</p>
+                </div>
+            </div>
         </article>
     </main>
 </body>
