--- a/pages/laptop_project_new_page.html
+++ b/pages/laptop_project_new_page.html
@@ -4,69 +4,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/styles.css">
     <title>(new) Laptop project</title>
 </head>
 
 <body>
     <div>
-        <ul>
-            <li>Laptop app</li>
-        </ul>
 
-        <div>
-            <h2>Laptop Project Firebase</h2>
-            <p>Personal Project</p>
-            <p>Start date - End date: 08/2023 - 11/2023</p>
-            <p>Technology: React Native, Firebase</p>
-            <p>Programming language: React Native</p>
-            <p>Description: Application to sell laptop</p>
-
-            <!-- What done in app -->
-            <div>
-                <p>What to expect:</p>
-                <ol>
-                    <p>Buy laptop</p>
-                    <p>Edit personal information</p>
-                </ol>
-            </div>
-            <!-- What have NOT done -->
-            <div>
-                <p>What are not done:</p>
-                <ol>
-                    <li>Clean, commented code</li>
-                    <li>Cannot use coupons even though it's there</li>
-                </ol>
-            </div>
+        <h1>Information</h1>
+        <p>Personal Project</p>
+        <div class="project_row">
+            <p>Name:</p>
+            <p>Laptop Project Firebase</p>
+        </div>
+        <div class="project_row">
+            <p>Start - End:</p>
+            <p>10/2023 - 11/2023</p>
+        </div>
+        <div class="project_row">
+            <p>Technology:</p>
+            <p>React Native, Firebase</p>
+        </div>
+        <div class="project_row">
+            <p>Programming language:</p>
+            <p>Javascript</p>
+        </div>
+        
+        <div class="project_row">
+            <p>Link:</p>
+            <p><a href="https://github.com/Amirelo/LaptopStoreAppFirebase"
+                    target="_blank">https://github.com/Amirelo/LaptopStoreAppFirebase</a></p>
         </div>
 
-        <div>
-            <h2>Admin Web</h2>
-            <p>Personal Project</p>
-            <p>Start date - End date: 08/2023 - 11/2023</p>
-            <p>Technology: ReactJs </p>
-            <p>Programming Language: javscript</p>
-            <p>Description: Application to sell laptop</p>
-            <p>Require: MySQL Server</p>
-
-            <!-- What done in app -->
-            <div>
-                <p>What to expect:</p>
-                <ol>
-                    <p>CRUD operations</p>
-                    <p>Unneccessary items are not deleted, but set status to false</p>
-                    <p>Verify/ change order status</p>
-                </ol>
-            </div>
-            <!-- What have NOT done -->
-            <div>
-                <p>What are not done:</p>
-                <ol>
-                    <li>Split into components</li>
-                    <li>Layout is hard to look at</li>
-                </ol>
-            </div>
+        <div class="project_row">
+            <p>Description:</p>
+            <p>This is an app about selling laptop. The layout is from my previous project, I change the database to Firebase to be more accessible</p>
         </div>
 
+        <h1>Installation</h1>
+        <div class="project_row">
+            <p>Step 1:</p>
+            <p>Go to project page: <a href="https://github.com/Amirelo/LaptopStoreAppFirebase"
+                    target="_blank">https://github.com/Amirelo/LaptopStoreAppFirebase</a> </p>
+        </div>
+        <div class="project_row">
+            <p>Step 2:</p>
+            <p>Download and extract project</p>
+        </div>
+        <div class="project_row">
+            <p>Step 3:</p>
+            <p>Open project folder in Visual Studio Code or any editor</p>
+        </div>
+        <div class="project_row">
+            <p>Step 4:</p>
+            <p>In the terminal below, type "npm install"</p>
+        </div>
+
+        <div class="project_row">
+            <p>Step 5:</p>
+            <p>Connect to device or run emulator, in terminal, type "npm run android"</p>
+        </div>
+
+        <h1>Video</h1>
+        <h1>Screenshots</h1>
+        <img src="../images/laptop_project_new/laptop_new_1.jpg" width="200" alt="">
+        <img src="../images/laptop_project_new/laptop_new_2.jpg" width="200" alt="">
+        <img src="../images/laptop_project_new/laptop_new_3.jpg" width="200" alt="">
     </div>
 </body>
 
