--- a/pages/laptop_project_old_page.html
+++ b/pages/laptop_project_old_page.html
@@ -4,129 +4,264 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/about_styles.css">
     <title>(old) Laptop project</title>
 </head>
 
 <body>
-    <div>
-        <p>Contain 4 projects:</p>
+    <main>
+        <h3>Contain 4 projects:</h3>
         <ul>
             <li>Laptop app old (span through 2 projects)</li>
             <li>Laptop Admin Page</li>
             <li>Laptop MySQL Server</li>
         </ul>
-        <p>Note: Must start MySQL Server to work</p>
+        <h3>Note: MUST start MySQL Server to work</h3>
 
-        <div>
-            <h2>SQL SERVER</h2>
-            <p>Personal Project</p>
-            <p>Start date - End date: 08/2023 - 11/2023</p>
-            <p>Technology: MySQL, XAMPP </p>
-            <p>Programming Lanugage: PHP</p>
-            <p>Description: Application to sell laptop</p>
-
-            <!-- What done in app -->
-            <div>
-                <p>What to expect:</p>
-                <ol>
-                    <p>APIs to connect to SQL</p>
-                    <p>Need to run Database.sql first</p>
-                    <p>Send email verification with PHP Mailer</p>
-                    <p>Email are received in MailTrap</p>
-                </ol>
+        <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
+            <h3>Personal Project</h3>
+            <div class="project_row">
+                <p>Name:</p>
+                <p>SQL Server</p>
             </div>
-            <!-- What have NOT done -->
-            <div>
-                <p>What are not done:</p>
-                <ol>
-                    <li>Clean code</li>
-                    <li>Some services require many other services and was not done well</li>
-                </ol>
+            <div class="project_row">
+                <p>Start - End:</p>
+                <p>06/2023 - 08/2023</p>
             </div>
-        </div>
-
-        <div>
-            <h2>Admin Web</h2>
-            <p>Personal Project</p>
-            <p>Start date - End date: 08/2023 - 11/2023</p>
-            <p>Technology: ReactJs </p>
-            <p>Programming Lanugage: javascript</p>
-            <p>Description: Application to sell laptop</p>
-            <p>Require: MySQL Server</p>
-
-            <!-- What done in app -->
-            <div>
-                <p>What to expect:</p>
-                <ol>
-                    <p>CRUD operations</p>
-                    <p>Unneccessary items are not deleted, but set status to false</p>
-                    <p>Verify/ change order status</p>
-                </ol>
+            <div class="project_row">
+                <p>Technology:</p>
+                <p>Express, MySQL</p>
             </div>
-            <!-- What have NOT done -->
-            <div>
-                <p>What are not done:</p>
-                <ol>
-                    <li>Split into components</li>
-                    <li>Layout is hard to look at</li>
-                </ol>
+            <div class="project_row">
+                <p>Programming language:</p>
+                <p>PHP (PDO)</p>
+            </div>
+            <div class="project_row">
+                <p>Link:</p>
+                <p><a href="https://github.com/Amirelo/LaptopProjectServerPHP"
+                        target="_blank">https://github.com/Amirelo/LaptopProjectServerPHP</a></p>
+            </div>
+
+            <div class="project_row">
+                <p>Description:</p>
+                <p>The Server of Laptop Project, must run before opening app/admin page</p>
+            </div>
+            <div class="project_row">
+                <p>What in the project:</p>
+                <ul>
+                    <li>APIs</li>
+                    <li>Send Email with PHPMailer</li>
+                    <li>Emails are received in MailTrap</li>
+                </ul>
             </div>
         </div>
 
-        <div>
-            <h2>Laptop Project App (Expo)</h2>
-            <p>Personal Project</p>
-            <p>Start date - End date: 08/2023 - 11/2023</p>
-            <p>Technology: ReactJs </p>
-            <p>Programming Lanugage: javascript</p>
-            <p>Description: Application to sell laptop</p>
-            <p>Require: MySQL Server</p>
-
-            <!-- What done in app -->
-            <div>
-                <p>What to expect:</p>
-                <ol>
-                    <p>Create components</p>
-                </ol>
+        <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
+            <h3>Personal Project</h3>
+            <div class="project_row">
+                <p>Name:</p>
+                <p>Admin Web</p>
             </div>
-            <!-- What have NOT done -->
-            <div>
-                <p>What are not done:</p>
-                <ol>
-                    <li></li>
-                </ol>
+            <div class="project_row">
+                <p>Start - End:</p>
+                <p>07/2023 - 08/2023</p>
             </div>
-        </div>
-
-        <div>
-            <h2>Laptop Project App (React Native)</h2>
-            <p>Personal Project</p>
-            <p>Start date - End date: 08/2023 - 11/2023</p>
-            <p>Technology: ReactJs </p>
-            <p>Programming Lanugage: javascript</p>
-            <p>Description: Application to sell laptop</p>
-            <p>Require: MySQL Server</p>
-
-            <!-- What done in app -->
-            <div>
-                <p>What to expect:</p>
-                <ol>
-                    <p>Change app from Expo to React Native</p>
-                    <p>Create components and update old components</p>
-                    <p>Add Google Sign In</p>
-
-                </ol>
+            <div class="project_row">
+                <p>Technology:</p>
+                <p>ReactJS, Next</p>
             </div>
-            <!-- What have NOT done -->
-            <div>
-                <p>What are not done:</p>
-                <ol>
-                    <li>Coupons are not useable</li>
-                </ol>
+            <div class="project_row">
+                <p>Programming language:</p>
+                <p>Javascript, Tailwind</p>
+            </div>
+            <div class="project_row">
+                <p>Link:</p>
+                <p><a href="https://github.com/Amirelo/LaptopProjectAdminWeb-NextJs"
+                        target="_blank">https://github.com/Amirelo/LaptopProjectAdminWeb-NextJs</a></p>
+            </div>
+
+            <div class="project_row">
+                <p>Description:</p>
+                <p>Admin page for CRUD operations</p>
+            </div>
+            <div class="project_row">
+                <p>What in the project:</p>
+                <ul>
+                    <li>Display/Edit items</li>
+                    <li>Deactivate item instead of delete</li>
+                    <li>Dashboard show status of sales</li>
+                </ul>
             </div>
         </div>
 
-    </div>
+        <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
+            <h3>Personal Project</h3>
+            <div class="project_row">
+                <p>Name:</p>
+                <p>Laptop App (React Native)</p>
+            </div>
+            <div class="project_row">
+                <p>Start - End:</p>
+                <p>10/08/2023 - 09/09/2023</p>
+            </div>
+            <div class="project_row">
+                <p>Technology:</p>
+                <p>React Native</p>
+            </div>
+            <div class="project_row">
+                <p>Programming language:</p>
+                <p>Javascript</p>
+            </div>
+            <div class="project_row">
+                <p>Link:</p>
+                <p><a href="https://github.com/Amirelo/LaptopProjectAppReactNative"
+                        target="_blank">https://github.com/Amirelo/LaptopProjectAppReactNative</a></p>
+            </div>
+
+            <div class="project_row">
+                <p>Description:</p>
+                <p>Convert below Expo app to React Native</p>
+            </div>
+            <div class="project_row">
+                <p>What in the project:</p>
+                <ul>
+                    <li>Restructure some components</li>
+                    <li>Google Sign In without opening web</li>
+                    <li>Add change languages and themes</li>
+                </ul>
+            </div>
+        </div>
+
+        <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
+            <h3>Personal Project</h3>
+            <div class="project_row">
+                <p>Name:</p>
+                <p>Laptop App (Expo)</p>
+            </div>
+            <div class="project_row">
+                <p>Start - End:</p>
+                <p>21/07/2023 - 10/08/2023</p>
+            </div>
+            <div class="project_row">
+                <p>Technology:</p>
+                <p>Expo</p>
+            </div>
+            <div class="project_row">
+                <p>Programming language:</p>
+                <p>Javascript</p>
+            </div>
+            <div class="project_row">
+                <p>Link:</p>
+                <p><a href="https://github.com/Amirelo/LaptopProjectReactExpo"
+                        target="_blank">https://github.com/Amirelo/LaptopProjectReactExpo</a></p>
+            </div>
+
+            <div class="project_row">
+                <p>Description:</p>
+                <p>Design and create app</p>
+            </div>
+            <div class="project_row">
+                <p>What in the project:</p>
+                <ul>
+                    <li>Design components and layout</li>
+                    <li>Google Sign In without opening web</li>
+                    <li>Add change languages and themes</li>
+                </ul>
+            </div>
+        </div>
+
+        <h1>Installation</h1>
+        <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
+            <div class="project_row">
+                <p>Step 1:</p>
+                <p>Go to project page: <a href="
+                    https://github.com/Amirelo/LaptopProjectServerPHP" target="_blank">
+                        https://github.com/Amirelo/LaptopProjectServerPHP</a> </p>
+            </div>
+            <div class="project_row">
+                <p>Step 2:</p>
+                <p>Download and extract project</p>
+            </div>
+            <div class="project_row" style="margin-bottom: 20px;">
+                <p>Step 3:</p>
+                <p>Initiate MySQL datebase with database.sql first</p>
+            </div>
+            <div style="padding-left: 20px; margin-bottom: 20px;">
+                <h3>For expo</h3>
+                <div class="project_row">
+                    <p>Step 4:</p>
+                    <p>Go to project page: <a href="https://github.com/Amirelo/LaptopProjectReactExpo" target="_blank">
+                            https://github.com/Amirelo/LaptopProjectReactExpo</a> </p>
+                </div>
+
+                <div class="project_row">
+                    <p>Step 5:</p>
+                    <p>Download and extract project</p>
+                </div>
+                <div class="project_row">
+                    <p>Step 6:</p>
+                    <p>Start Server, then start Expo project</p>
+                </div>
+
+                <div class="project_row">
+                    <p>Step 7:</p>
+                    <p>Connect with app: Expo Go</p>
+                </div>
+            </div>
+
+            <div style="padding-left: 20px;">
+                <h3>For React Native</h3>
+                <div class="project_row">
+                    <p>Step 4:</p>
+                    <p>Go to project page: <a href="https://github.com/Amirelo/LaptopProjectAppReactNative"
+                            target="_blank">https://github.com/Amirelo/LaptopProjectAppReactNative</a> </p>
+                </div>
+
+                <div class="project_row">
+                    <p>Step 5:</p>
+                    <p>Download and extract project</p>
+                </div>
+                <div class="project_row">
+                    <p>Step 6:</p>
+                    <p>Install project dependencies with "npm install"</p>
+                </div>
+
+                <div class="project_row">
+                    <p>Step 7:</p>
+                    <p>Connect device or run emulator</p>
+                </div>
+                <div class="project_row">
+                    <p>Step 8:</p>
+                    <p>Start Server, then Start project with "npm run android"</p>
+                </div>
+            </div>
+
+            <div style="padding-left: 20px;">
+                <h3>For Admin Page</h3>
+                <div class="project_row">
+                    <p>Step 4:</p>
+                    <p>Go to project page: <a href="https://github.com/Amirelo/LaptopProjectAdminWeb-NextJs"
+                            target="_blank">https://github.com/Amirelo/LaptopProjectAdminWeb-NextJs</a> </p>
+                </div>
+
+                <div class="project_row">
+                    <p>Step 5:</p>
+                    <p>Download and extract project</p>
+                </div>
+                <div class="project_row">
+                    <p>Step 6:</p>
+                    <p>Install project dependencies with "npm install"</p>
+                </div>
+
+                <div class="project_row">
+                    <p>Step 8:</p>
+                    <p>Start Server, then Start project with "npm start"</p>
+                </div>
+            </div>
+        </div>
+
+    </main>
 </body>
 
 </html>
