--- a/pages/laptop_project_old_page.html
+++ b/pages/laptop_project_old_page.html
@@ -11,6 +11,7 @@
 
 <body>
     <main>
+        <h1>Information</h1>
         <h3>Contain 4 projects:</h3>
         <ul>
             <li>Laptop app old (span through 2 projects)</li>
