--- a/pages/florist_project_page.html
+++ b/pages/florist_project_page.html
@@ -1,11 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Florist project</title>
+    <link rel="stylesheet" href="../styles/styles.css">
+    <title>(new) Laptop project</title>
 </head>
+
 <body>
-    <p>Florist project</p>
+    <main>
+        <h1>Information</h1>
+        <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
+            <h3>Personal Project</h3>
+            <div class="project_row">
+                <p>Name:</p>
+                <p>Laptop Project Firebase</p>
+            </div>
+            <div class="project_row">
+                <p>Start - End:</p>
+                <p>10/2023 - 11/2023</p>
+            </div>
+            <div class="project_row">
+                <p>Technology:</p>
+                <p>React Native, Firebase</p>
+            </div>
+            <div class="project_row">
+                <p>Programming language:</p>
+                <p>Javascript</p>
+            </div>
+            <div class="project_row">
+                <p>Link:</p>
+                <p><a href="https://github.com/Amirelo/LaptopStoreAppFirebase"
+                        target="_blank">https://github.com/Amirelo/LaptopStoreAppFirebase</a></p>
+            </div>
+
+            <div class="project_row">
+                <p>Description:</p>
+                <p>This is an app about selling laptop. The layout is from my previous project, I change the database to
+                    Firebase to be more accessible</p>
+            </div>
+        </div>
+
+        <h1>Installation</h1>
+        <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
+            <div class="project_row">
+                <p>Step 1:</p>
+                <p>Go to project page: <a href="https://github.com/Amirelo/LaptopStoreAppFirebase"
+                        target="_blank">https://github.com/Amirelo/LaptopStoreAppFirebase</a> </p>
+            </div>
+            <div class="project_row">
+                <p>Step 2:</p>
+                <p>Download and extract project</p>
+            </div>
+            <div class="project_row">
+                <p>Step 3:</p>
+                <p>Open project folder in Visual Studio Code or any editor</p>
+            </div>
+            <div class="project_row">
+                <p>Step 4:</p>
+                <p>In the terminal below, type "npm install"</p>
+            </div>
+
+            <div class="project_row">
+                <p>Step 5:</p>
+                <p>Connect to device or run emulator, in terminal, type "npm run android"</p>
+            </div>
+        </div>
+
+        <!-- <h1>Video</h1> -->
+        <h1 >Screenshots</h1>
+        <div style="display: flex; justify-content: space-around;margin-bottom: 20px;">
+            <img src="../images/laptop_project_new/laptop_new_1.jpg" width="200" alt="">
+            <img src="../images/laptop_project_new/laptop_new_2.jpg" width="200" alt="">
+            <img src="../images/laptop_project_new/laptop_new_3.jpg" width="200" alt="">
+        </div>
+    </main>
+</main>
 </body>
+
 </html>
