Update florist shop page details

--- a/pages/florist_project_page.html
+++ b/pages/florist_project_page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/styles.css">
-    <title>(new) Laptop project</title>
+    <title>Florist Shop</title>
 </head>
 
 <body>
@@ -15,11 +15,11 @@
             <h3>Personal Project</h3>
             <div class="project_row">
                 <p>Name:</p>
-                <p>Laptop Project Firebase</p>
+                <p>Florist Shop</p>
             </div>
             <div class="project_row">
                 <p>Start - End:</p>
-                <p>10/2023 - 11/2023</p>
+                <p>29/01/2024 - NOW</p>
             </div>
             <div class="project_row">
                 <p>Technology:</p>
@@ -27,18 +27,18 @@
             </div>
             <div class="project_row">
                 <p>Programming language:</p>
-                <p>Javascript</p>
+                <p>Typescript</p>
             </div>
             <div class="project_row">
                 <p>Link:</p>
-                <p><a href="https://github.com/Amirelo/LaptopStoreAppFirebase"
-                        target="_blank">https://github.com/Amirelo/LaptopStoreAppFirebase</a></p>
+                <p><a href="https://github.com/Amirelo/Florist-Shop-ReactNative"
+                        target="_blank">https://github.com/Amirelo/Florist-Shop-ReactNative</a></p>
             </div>
 
             <div class="project_row">
                 <p>Description:</p>
-                <p>This is an app about selling laptop. The layout is from my previous project, I change the database to
-                    Firebase to be more accessible</p>
+                <p>This is an app about selling flowers, bouquet. The layout is based on <a target="_blank"
+                        href="https://www.figma.com/community/file/1236066798155280173/e-commerce-mobile-app-florist?searchSessionId=lsb9pp81-dh3z8033219">Figma - Ivana’s little design world</a> </p>
             </div>
         </div>
 
@@ -46,8 +46,8 @@
         <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
             <div class="project_row">
                 <p>Step 1:</p>
-                <p>Go to project page: <a href="https://github.com/Amirelo/LaptopStoreAppFirebase"
-                        target="_blank">https://github.com/Amirelo/LaptopStoreAppFirebase</a> </p>
+                <p>Go to project page: <a href="https://github.com/Amirelo/Florist-Shop-ReactNative"
+                        target="_blank">https://github.com/Amirelo/Florist-Shop-ReactNative</a> </p>
             </div>
             <div class="project_row">
                 <p>Step 2:</p>
@@ -69,14 +69,16 @@
         </div>
 
         <!-- <h1>Video</h1> -->
-        <h1 >Screenshots</h1>
+        <h1>Screenshots</h1>
         <div style="display: flex; justify-content: space-around;margin-bottom: 20px;">
-            <img src="../images/laptop_project_new/laptop_new_1.jpg" width="200" alt="">
-            <img src="../images/laptop_project_new/laptop_new_2.jpg" width="200" alt="">
-            <img src="../images/laptop_project_new/laptop_new_3.jpg" width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_1.jpg" width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_2.jpg" width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_3.jpg" width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_4.jpg" width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/flrorist_shop/florist_shop_5.jpg" width="200" alt="">
         </div>
     </main>
-</main>
+    </main>
 </body>
 
 </html>
