Create Ulmo Project Page

--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
                         <p>Personal Project</p>
                         <div class="project_row">
                             <p>Status:</p>
-                            <p>Paused</p>
+                            <p class="Ongoing">Paused</p>
                         </div>
                         <div class="project_row">
                             <p>Start - End:</p>
-                            <p> 11/2023 - NOW</p>
+                            <p>09/2023 - 10/2023</p>
                         </div>
                         <div class="project_row">
                             <p>Technology:</p>
@@ -210,11 +210,11 @@
                         </div>
                         <div class="project_row" style="margin-bottom:40px">
                             <p>Description:</p>
-                            <p>Sell clothes</p>
+                            <p>Sell furnitures</p>
                         </div>
                     </div>
 
-                    <a class="button_project" href="./pages/florist_project_page.html">See More</a>
+                    <a class="button_project" href="./pages/ulmo_project_page.html">See More</a>
                 </div>
             </article>
 
