--- a/pages/ulmo_project_page.html
+++ b/pages/ulmo_project_page.html
@@ -1,16 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ulmo project</title>
+    <link rel="stylesheet" href="../styles/styles.css">
+    <title>Ulmo Furniture Shop</title>
 </head>
+
 <body>
-    <div>
-        <p>Personal project</p>
-        <p>Using Figma community design: </p>
-        <p>Technology: Android Studio</p>
-        <p>Programming Language: Kotlin</p>
-    </div>
+    <main>
+        <h1>Information</h1>
+        <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
+            <h3>Personal Project</h3>
+            <div class="project_row">
+                <p>Name:</p>
+                <p>Ulmo Furniture Shop</p>
+            </div>
+            <div class="project_row">
+                <p>Start - End:</p>
+                <p>09/2023 - 10/2023</p>
+            </div>
+            <div class="project_row">
+                <p>Technology:</p>
+                <p>Android Studio</p>
+            </div>
+            <div class="project_row">
+                <p>Programming language:</p>
+                <p>Kotlin</p>
+            </div>
+            <div class="project_row">
+                <p>Link:</p>
+                <p><a href="https://github.com/Amirelo/FurnitureStore"
+                        target="_blank">https://github.com/Amirelo/FurnitureStore</a></p>
+            </div>
+
+            <div class="project_row">
+                <p>Description:</p>
+                <p>This is an app about selling urnitures. The layout is based on <a target="_blank"
+                        href="https://www.figma.com/community/file/1104353311804271037/ulmo-e-commerce-ui-kit?searchSessionId=lsba4ovx-sgjo5g4h54">Figma
+                        - Roman Beliaev</a> </p>
+            </div>
+        </div>
+
+        <h1>Installation</h1>
+        <div style="padding: 12px; border: 1px solid black; background-color: #e1f2e6; width: 50%;margin-bottom: 20px;">
+            <div class="project_row">
+                <p>Step 1:</p>
+                <p>Go to project page: <a href="https://github.com/Amirelo/FurnitureStore"
+                        target="_blank">https://github.com/Amirelo/FurnitureStore</a> </p>
+            </div>
+            <div class="project_row">
+                <p>Step 2:</p>
+                <p>Download and extract project</p>
+            </div>
+            <div class="project_row">
+                <p>Step 3:</p>
+                <p>Open project folder in Android Studio</p>
+            </div>
+         
+            <div class="project_row">
+                <p>Step 4:</p>
+                <p>Connect to device or run emulator, then build</p>
+            </div>
+        </div>
+
+        <!-- <h1>Video</h1> -->
+        <h1>Screenshots</h1>
+        <div style="display: flex; justify-content: space-around;margin-bottom: 20px;">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/ulmo_project/ulmo_1.jpg"
+                width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/ulmo_project/ulmo_2.jpg"
+                width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/ulmo_project/ulmo_3.jpg"
+                width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/ulmo_project/ulmo_4.jpg"
+                width="200" alt="">
+            <img style="border: 1px solid black; border-radius: 4px;" src="../images/ulmo_project/ulmo_5.jpg"
+                width="200" alt="">
+                <img style="border: 1px solid black; border-radius: 4px;" src="../images/ulmo_project/ulmo_6.jpg"
+                width="200" alt="">
+        </div>
+    </main>
+    </main>
 </body>
+
 </html>
