Remove button from item that doesn't have page yet

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                     </div>
 
 
-                    <a class="button_project" href="./pages/florist_project_page.html">See More</a>
+                    <!-- <a class="button_project" href="./pages/florist_project_page.html">See More</a> -->
                 </div>
             </article>
 
@@ -243,7 +243,7 @@
                             <p>Simple space shooter game</p>
                         </div>
                     </div>
-                    <a class="button_project" href="./pages/florist_project_page.html">See More</a>
+                    <!-- <a class="button_project" href="./pages/florist_project_page.html">See More</a> -->
                 </div>
 
             </article>
