--- a/index.html
+++ b/index.html
@@ -157,36 +157,7 @@
         <!-- Projects -->
         <h1>Other Projects</h1>
         <section class="projects">
-            <article class="project_item">
-                <div>
-                    <img src="./images/lafyuu.jpg" class="img_cover" width="200px" />
-                </div>
-                <div class="project_item_info">
-                    <div>
-                        <h2>Clothes Shop</h2>
-                        <p>Personal Project</p>
-                        <div class="project_row">
-                            <p>Status:</p>
-                            <p>Paused</p>
-                        </div>
-                        <div class="project_row">
-                            <p>Start - End:</p>
-                            <p>11/2023 - NOW</p>
-                        </div>
-                        <div class="project_row">
-                            <p>Technology:</p>
-                            <p>Flutter</p>
-                        </div>
-                        <div class="project_row" style="margin-bottom:40px">
-                            <p>Description:</p>
-                            <p>Sell clothes</p>
-                        </div>
-                    </div>
-
-
-                    <!-- <a class="button_project" href="./pages/florist_project_page.html">See More</a> -->
-                </div>
-            </article>
+           
 
             <article class="project_item">
                 <div>
@@ -243,7 +214,7 @@
                             <p>Simple space shooter game</p>
                         </div>
                     </div>
-                    <!-- <a class="button_project" href="./pages/florist_project_page.html">See More</a> -->
+                    <a class="button_project" href="./pages/shooter_game_page.html">See More</a>
                 </div>
 
             </article>
